--- a/NexusOss/templates/deployment.yaml
+++ b/NexusOss/templates/deployment.yaml
@@ -21,17 +21,5 @@ spec:
           ports:
             - containerPort: 8081
               name: http
-          resources:
-            requests:
-              memory: {{ .Values.resources.requests.memory }}
-              cpu: {{ .Values.resources.requests.cpu }}
-            limits:
-              memory: {{ .Values.resources.limits.memory }}
-              cpu: {{ .Values.resources.limits.cpu }}
-          volumeMounts:
-            - name: nexus-data
-              mountPath: /nexus-data
-      volumes:
-        - name: nexus-data
-          persistentVolumeClaim:
-            claimName: nexus-data-pvc
+          env:
+            - name: NEXUS_SEC
